# workflow_ai

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  .prettierrc  ANTIGRAVITY_SYSTEM.md  CONTRIBUTING.md  Dockerfile  METHODOLOGY.md  PLAN-EXTENSION-V3.md  PLAN-HITO-0.1.md  PLAN-HITO-0.2.md  PLAN-HITO-0.3.md  PLAN-HITO-1.1.md  PLAN-HITO-1.2.md  PLAN-HITO-1.3.md  PLAN-HITO-1.4.md  PLAN-HITO-2.0.md  PLAN-HITO-2.1.md  PLAN-HITO-2.2.md  PLAN-HITO-2.3.md  PLAN-HITO-2.4.md  PLAN-HITO-2.5.md  PLAN-HITO-2.6.md  PLAN-HITO-2.7.md  PLAN-POLISH-TOOLBAR.md  PREFLIGHT_TEMPLATE.md  PROJECT_CHARTER.md  README.md  ROADMAP.yml  docker-compose.yml  modify_workflow.py  next.config.mjs  otel-config.yaml  package-lock.json  package.json  render.yaml  supabase_schema_digests.sql  supabase_schema_vectors.sql  tailwind.config.ts  (+2 more)
antigravity-engine/: Cargo.toml
antigravity-engine/pkg/: antigravity_engine.d.ts  antigravity_engine.js  antigravity_engine_bg.js  package.json  (+2 more)
canon/: 00_idea.md  01_stack.md  02_roadmap.md  03_invariants.md  04_definition_of_done.md
crdt-sync/: Cargo.toml
docs/: AGENTS.md  DIGEST_ENGINE.md  NEURO_SYMBOLIC_INTERFERENCE.md  ROADMAP.md  TOKEN_ECONOMY.md
documentacion/: ARQUITECTURA_FINAL.md  DESIGN_SYSTEM_2.0.md  DOCUMENTACION_TECNICA_2026.md  FASE_4_SINCERIDAD_Y_AUTORIDAD.md  GRAPH_RAG_ARCHITECTURE.md  GUIA_CAPTURA.md  HITO_0.1_SUMMARY.md  HITO_0.2_SUMMARY.md  HITO_0.3_SUMMARY.md  HITO_1.1_SUMMARY.md  HITO_1.2_SUMMARY.md  HITO_1.3_SUMMARY.md  HITO_1.4_SUMMARY.md  HITO_2.0_SUMMARY.md  HITO_2.1_SUMMARY.md  HITO_2.2_SUMMARY.md  HITO_2.3_SUMMARY.md  HITO_2.4_SUMMARY.md  HITO_2.5_SUMMARY.md  HITO_2.6_SUMMARY.md  HITO_2.7_SUMMARY.md  HITO_3.1_HIERARCHICAL_DIGESTS.md  HITO_3.2_STALENESS_DETECTION.md  HITO_3.3_DYNAMIC_PRICING.md  HITO_3.4_LINK_OS_EXTENSION.md  HITO_3.5_GATE8_IDENTITY.md  HITO_3.6_GATE9_COLLABORATION.md  HITO_3.7_GATE9_EXTENSION_BRAIN.md  HITO_4.10_VAULT_SECURITY.md  HITO_4.11_FORENSIC_AUDIT_VIEW.md  HITO_4.12_PROFESSIONAL_DEPLOYMENT.md  HITO_4.1_SOVEREIGN_ONBOARDING.md  HITO_4.1_SSO_RBAC.md  HITO_4.2_LOCAL_COMPILER.md  HITO_4.3_FORENSIC_UX.md  HITO_4.4_AUTHORITY_SIGNATURE.md  HITO_4.5_AUDIT_LOGS.md  HITO_4.6_MEDIATOR_AND_FORENSICS.md  HITO_4.7_ANTIGRAVITY_ENGINE.md  HITO_4.8_RUST_INGESTOR.md  (+19 more)
extension/: build_error.txt  errors.txt  index.html  manifest.json  offscreen.html  package-lock.json  package.json  sidepanel.html  tsconfig.json  vite.config.ts  welcome.html
ingestor-rust/: Cargo.toml  Dockerfile
logic-engine/: Cargo.toml
logic-engine/src/: lib.rs
migrations/: 00_init_schema.sql
neuro-hypervisor/: Cargo.toml
rlm-core/: Dockerfile  pyproject.toml  requirements.txt
rlm-core/src/rlm_core/: __init__.py  main.py  neuro_hypervisor.pyd
signer-core/: Cargo.toml
signer-core/src/: lib.rs
src/: instrumentation.ts  middleware.ts
stream-assembler/: Cargo.toml
stream-assembler/src/: main.rs
tests/: collaboration.test.ts  compiler.test.ts  digest_engine.test.ts  gate8_security.test.ts  guards.test.ts  observability.test.ts  observability_demo.ts  receipts.test.ts  repro_merge_logic.js  routing_test.ts  schema.test.ts  templates.test.ts  verifier.test.ts  versioning.test.ts
workgraph-worker/: Cargo.toml  Dockerfile
workgraph-worker/src/: main.rs
(+208 files in other folders)
