[package]
name = "logic-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance SAT Solver for WorkGraph OS PIN nodes"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
varisat = "0.2"
console_error_panic_hook = "0.1"
