[package]
name = "stream-assembler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
printpdf = "0.6"
lopdf = "0.32"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
async-stream = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"

[profile.release]
opt-level = "z"
lto = true
