[package]
name = "workgraph-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
# From Ingestor/Assembler
printpdf = "0.6"
lopdf = "0.32"
scraper = "0.18"
anyhow = "1.0"
# Database connectivity
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
dotenv = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
